ops/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: new-energy-monitoring
  labels:
    name: new-energy-monitoring
